# mcp_atlas

./: .gitignore  .mcp.json.example  Procfile  README.md  proxy.py  pyproject.toml  railway.json
mcp_searchatlas/: server.py
